Colored damage types in ufopaedia
Updated enemy item sets.
Added colors for every damage type.
Added less-lethal and breaching damage types (no stat changes).
Added extra ufopaedia pages for weapons with more than 3 ammo types.
Added Field dressing and Zevada(1x)/Shrapnel(2x) ufopaedia articles.
updated 12G Inc, knife, ballistic knife, and breaching hammer ufopaedia articles.
Zevada(1x)/Shrapnel(2x) is now 700$ and now has the proper listorder number.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,7 +17,10 @@ Changes made:
 * Fixed ammo placement on M60 sprite
 * HK416 w/ m320 now uses correct sprite when loaded with ammo
 * Added sprite for MSG90 w/ 10rnd mags
-* Fixed minor errors in ufopaedia articles
+* Fixed errors in ufopaedia articles
+* Added Field dressing ufopaedia article
+* Added colored damge types to ufopaedia
+* 2 new damage types (no stat changes)
 > Pistols
 	- M9
         - Browning Hi-Power
