FN MAG, more ufopaedia improvements
FN MAG
Flash ammo type
Zevada ammo now shows partial flash damage
New ufopaedia article that explains the flashbang system
Fixed armor ufopaedia article text
updated item sets

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,8 @@ Changes made:
         - Browning Hi-Power
 > SMGs
         - M3 Grease gun
+> LMGS
+        - FN MAG
 > Rifles
 	- AKs-74u + SOPMOD
         - AK-74 w/ GP-25
