--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Changes made:
 * Uniform w/ NVG & Adv. NVG
 * manufacturing option to swap from NV to Adv. NV
 * Flashbang ammo for KS-23
+* Added 100x 5.56 Beta C mag
 * Sorted item IDs, should be much easier to find things.
 * Visual cue for flashbanged units & partially flashbanged units
 * Units now flash red when hit
@@ -20,6 +21,9 @@ Changes made:
 * HK416 w/ m320 now uses correct sprite when loaded with ammo
 * Added sprite for MSG90 w/ 10rnd mags
 * Fixed errors in ufopaedia articles
+* Fixed p226 sounds
+* Added new Double barrel sounds
+* Swaped sounds on the fmg9, mp7, p90 (sopmod) and sako.
 * Added Field dressing ufopaedia article
 * Added colored damge types to ufopaedia
 * 2 new damage types (no stat changes)
