--- a/Language/es-419.yml
+++ b/Language/es-419.yml
@@ -423,12 +423,12 @@ es-419:
   STR_ENGINEER: "Armero"
   STR_ENGINEERS: "Armeros"
   STR_ENGINEERS_AVAILABLE: "Armeros disponibles>{ALT}{0}"
-  STR_ENGINEERS_AVAILABLE_UC: "ARMANOS DISPONIBLES>{ALT}{0}"
+  STR_ENGINEERS_AVAILABLE_UC: "ARMEROS DISPONIBLES>{ALT}{0}"
   STR_ENGINEERS_ALLOCATED: "Armeros asignados>{ALT}{0}"
   STR_ENGINEERS__ALLOCATED: "Armeros asignados"
   STR_ENGINEER_HOURS_TO_PRODUCE_ONE_UNIT: "{0} horas de armero para producir una unidad"
 
-  STR_UFOPAEDIA: "Carpeta de informes"
+  STR_UFOPAEDIA: "Informes"
   STR_UFOPAEDIA_UC: "CARPETA DE INFORMES"
   STR_INTERCEPT: "DESPLEGAR"
   STR_LAUNCH_INTERCEPTION: "DESPLEGAR FUERZAS"
@@ -721,9 +721,9 @@ es-419:
   STR_HK_4_6_30mmX20: "HK 4,6x30mm (20x)"
   STR_HK_4_6_30mmX30: "HK 4,6x30mm (30x)"
   STR_HK_4_6_30mmX40: "HK 4,6x30mm (40x)"
-  STR_45_ACP_X7: ."45 ACP (7x)"
-  STR_45_ACP_X12: ."45 ACP (12x)"
-  STR_45_ACP_X25: ."45 ACP (25x)" 
+  STR_45_ACP_X7: ".45 ACP (7x)"
+  STR_45_ACP_X12: ".45 ACP (12x)"
+  STR_45_ACP_X25: ".45 ACP (25x)" 
   STR_50_AE_X7: ."50 AE (7x)"
   STR_65CBJ_X30: "6,5x25mm CBJ (30x)"
   STR_65CBJ_X100: "6,5x25mm CBJ (100x)"
@@ -733,7 +733,7 @@ es-419:
   STR_5_45_X45: "5,45x39mm (45x)"
   STR_5_45_X60: "5,45x39mm (60x)"
   STR_5_56_X30: "5,56 OTAN (30x)"
-  STR_5_56_X100_DRUM: "5.56 OTAN (100x)"
+  STR_5_56_X100_DRUM: "5,56 OTAN (100x)"
   STR_5_56_X50: "Cinturón OTAN 5,56 (50x)"
   STR_5_56_X100: "Cinturón OTAN 5,56 (100x)"
   STR_22_LONG_RIFLE_X6: "Long Rifle .22 (6x)"
@@ -752,9 +752,9 @@ es-419:
   STR_SOVIET_7_62_MMR_X100: "7,62x54mmR (100x)"
   STR_9_39_X10: "9x39mm (10x)"
   STR_9_39_X20: "9x39mm (20x)"
-  STR_338_LAPUA_X5: ."338 Lapua Magnum (5x)"
-  STR_50_BMG_X5: ."50 BMG (5x)"
-  STR_50_BMG_X10: ."50 BMG (10x)"
+  STR_338_LAPUA_X5: ".338 Lapua Magnum (5x)"
+  STR_50_BMG_X5: ".50 BMG (5x)"
+  STR_50_BMG_X10: ".50 BMG (10x)"
   STR_127_X5: "12,7x108mm (5x)"
   STR_12G_BUCKSHOT_X2: "Perdigones calibre 12 (2x)"
   STR_12G_BUCKSHOT_X5: "Perdigones calibre 12 (5x)"
@@ -956,7 +956,7 @@ es-419:
 
   STR_DAMAGE_10: "MENOS LETAL"
   STR_DAMAGE_11: "RUPTURA"
-  STR_DAMAGE_12: "BENALLA"  
+  STR_DAMAGE_12: "FLASHBANG"  
 
 #extrastrings_TP.rul
 #nota: no estoy seguro de cuánto de este archivo usamos realmente, corté el material relacionado con los extraterrestres. Necesito limpiarlo
