Fixed bad palettes

--- a/Language/es-419.yml
+++ b/Language/es-419.yml
@@ -428,8 +428,8 @@ es-419:
   STR_ENGINEERS__ALLOCATED: "Armeros asignados"
   STR_ENGINEER_HOURS_TO_PRODUCE_ONE_UNIT: "{0} horas de armero para producir una unidad"
 
-  STR_UFOPAEDIA: "Informes"
-  STR_UFOPAEDIA_UC: "CARPETA DE INFORMES"
+  STR_UFOPAEDIA: "Carpeta de informes"
+  STR_UFOPAEDIA_UC: "INFORMES"
   STR_INTERCEPT: "DESPLEGAR"
   STR_LAUNCH_INTERCEPTION: "DESPLEGAR FUERZAS"
 
