Bugfixes, balance changes, research changes
Balance:
M3 now has more aimed accuracy, and significantly increased range.
Buckshot damage 25->18.
Operators now cost 100k on veteran and below.
LMG Movement inaccuracy system added, Including ufopaedia article explaining system
Research:
GL acquisition no longer blocked by AT acquisition.
Separated breaching tool acquisitions, no longer mutually exclusive, Hammer at equipment acquisition, Serbu at military acquisition, C4 after High explosives.
Misc:
Changed Raider sprite to display armor.
Fixed OFFICE02 staircase being blocked.
Fixed spawn rates of office varients.
Updated draw.io file.
Updated changelog.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,7 +6,7 @@ Changes made:
 * Removed Aim to Head tracks
 * Breaching Sim battle map
 * Uniform w/ NVG & Adv. NVG
-* manufacturing option to swap from NV to Adv. NV
+* Manufacturing option to swap from NV to Adv. NV
 * Flashbang ammo for KS-23
 * Added 100x 5.56 Beta C mag
 * Sorted item IDs, should be much easier to find things.
@@ -28,6 +28,13 @@ Changes made:
 * Added colored damage types to ufopaedia
 * Language file support
 * 2 new damage types (no stat changes)
+* M3 Shotgun range and accuracy increased
+* Buckshot ammo damage nerfed from 25->18
+* Operators on veterian and below now cost 100k instead of 200k
+* Breaching tools now no longer mutualy exclusive, and spread out throughout tech tree
+* GL aquisition no longer requires AT aquisition
+* Fixed office varient spawn rates
+* LMGs now have movement inaccuracy.
 > Pistols
 	- M9
         - Browning Hi-Power
