--- a/Language/en-US.yml
+++ b/Language/en-US.yml
@@ -105,9 +105,9 @@ en-US:
   STR_PECHENEG_UFOPAEDIA: "A russian general-purpose machine gun that has a heavy non-removable barrel that is forced-air-cooled instead of relying on the barrel to be switched during heavy use. The PKP Pecheneg has seen extensive use by Spetsnaz units. Its name is derived from the pecheneg people, a tribe that lived in the steppes of Russia and Ukraine."
   STR_NEGEV_UFOPAEDIA: "The IWI Negev is an israeli light machine gun adopted by the IDF. It was designed to be reliable in adverse conditions."
   STR_FN_MAG_UFOPAEDIA: "The FN MAG is a GPMG chambered in 7.62 NATO that has seen extensive use since its development in 1958, and is currently in use by over 90 countries."
-  STR_AUG_HBAR_UFOPAEDIA: "Based on the Styr AUG, The AUG HBAR is a heavy barreled varient allowing for more sustained fire. It also comes with an integrated bipod and fires from an open bolt to avoid cook offs."
-  STR_MG36_UFOPAEDIA: "A version of the G36 designed to fill a light machine gun role. While it is mostly similar to a regular G36, It has a heavier barrel to allow for longer periods sustained fire as well as a drum mag and an integrated bipod."
-  STR_C7A1_LSW_UFOPAEDIA: "Also known as the Colt Automatic Rifle, The C7A1 LSW is based on the M16 and was designed in 1982. To better suit sustained fire, it features an open bolt, a heavier barrel, a larger gas tube, and a uniquely square handguard."
+  STR_AUG_HBAR_UFOPAEDIA: "Less Movement Inaccuracy: -0.50%\n\nBased on the Styr AUG, The AUG HBAR is a heavy barreled variant allowing for more sustained fire. It also comes with an integrated bipod and fires from an open bolt to avoid cook offs."
+  STR_MG36_UFOPAEDIA: "Less Movement Inaccuracy: -0.50%\n\nA version of the G36 designed to fill a light machine gun role. While it is mostly similar to a regular G36, It has a heavier barrel to allow for longer periods sustained fire as well as a drum mag and an integrated bipod."
+  STR_C7A1_LSW_UFOPAEDIA: "Less Movement Inaccuracy: -0.50%\n\nAlso known as the Colt Automatic Rifle, The C7A1 LSW is based on the M16 and was designed in 1982. To better suit sustained fire, it features an open bolt, a heavier barrel, a larger gas tube, and a uniquely square handguard."
   STR_ULTIMAX_100_UFOPAEDIA: "A light machine gun designed in Singapore. It's lightweight compared to other machine guns and has high accuracy with sustained fire due to its constant-recoil system."
   STR_M60E6_UFOPAEDIA: "A modernized version of the M60. Its weight has been significantly reduced, and improvements have been made to its accuracy and reliability. It also has rails for mounting attachments."
 
@@ -206,6 +206,9 @@ en-US:
   STR_MELEE_ATTACKS_UFOPAEDIA: "Our Troops may use their pistols or the butts of their rifles to strike a target to attempt to subdue them if other means are not suitable in the situation. Care should be used when using this tactic, as these attacks can wound or even kill the target."
   STR_FLASHBANG_EFFECT: "Flashbangs"
   STR_FLASHBANG_EFFECT_UFOPAEDIA: "A fully flashbanged unit will flash blue, and has no accuracy or reactions, as well as very limited or no stamina.\n\nA unit that is flashing purple is partialy flashbanged and will have the same penalties as a fully flashbanged unit, except their accuracy will scale depending on how much they have been flashed instead of set to 0. Partial flash damage goes from 1 to 99, after which it becomes a full flash.\n\nAll forms of flashbang damage can stack, causing it to last longer. Every full flash lasts for 1 turn, including a turn for any remaining partial flash."
+  STR_LMG_ACCURACY: "LMG Movement Inaccuracy"
+  STR_LMG_ACCURACY_UFOPAEDIA: "Light Machine Guns have reduced accuracy depending on the percent of missing TUs the unit has.\nFor most LMGs this is a -0.80% accuracy multiplier added per percent of missing TUs, however for some this will be different and will be listed in their Ufopaedia article."
+
 
   STR_COALITION: "The Coalition"
   STR_TASK_FORCE: "Task Forces"
@@ -675,6 +678,7 @@ en-US:
 
   #Soldiers_and_armours.rul
   STR_OPERATOR: "Operator"
+  STR_OPERATOR_HIGHDIF: "Operator"
 
   STR_DEFAULT: "Uniform"
   STR_DEFAULT_BACKPACK: "Uniform (BP)"
