--- a/Language/es-419.yml
+++ b/Language/es-419.yml
@@ -494,15 +494,15 @@ es-419:
   STR_HK416_UBS_REMOVAL: "HK416: quitar MASS"
   STR_HK416_M320_REMOVAL: "HK416: quitar M320"
   STR_G36_AG_REMOVAL: "G36: quitar AG36"
-  STR_FX_05_SCOPED_REMOVAL: "FX-05: Quitar mira telescópica"
-  STR_M14_EBR_SCOPED_REMOVAL: "M14 EBR: Quitar mira telescópica"
-  STR_M16A2_SCOPED_REMOVAL: "M16A2: Quitar mira telescópica"
-  STR_M16A2_M203_REMOVAL: "M16A2: Quitar M203"
-  STR_FAMAS_SCOPED_REMOVAL: "FAMAS: Quitar mira telescópica"
-  STR_HK417_SCOPED_REMOVAL: "HK417: Quitar mira telescópica"
-  STR_CBJMS_SAW_REMOVAL: "CBJ-MS: Quitar kit SAW"
-  STR_SCAR_L_SOPMOD_REMOVAL: "SCAR-L: Quitar SOPMOD"
-  STR_SCAR_L_GL_REMOVAL: "SCAR-L: Quitar FN40GL"
+  STR_FX_05_SCOPED_REMOVAL: "FX-05: quitar mira telescópica"
+  STR_M14_EBR_SCOPED_REMOVAL: "M14 EBR: quitar mira telescópica"
+  STR_M16A2_SCOPED_REMOVAL: "M16A2: quitar mira telescópica"
+  STR_M16A2_M203_REMOVAL: "M16A2: quitar M203"
+  STR_FAMAS_SCOPED_REMOVAL: "FAMAS: quitar mira telescópica"
+  STR_HK417_SCOPED_REMOVAL: "HK417: quitar mira telescópica"
+  STR_CBJMS_SAW_REMOVAL: "CBJ-MS: quitar kit SAW"
+  STR_SCAR_L_SOPMOD_REMOVAL: "SCAR-L: quitar SOPMOD"
+  STR_SCAR_L_GL_REMOVAL: "SCAR-L: quitar FN40GL"
   STR_SCAR_H_SOPMOD_REMOVAL: "SCAR-H: quitar SOPMOD"
   STR_SCAR_H_GL_REMOVAL: "SCAR-H: quitar FN40GL"
   STR_GLOCK_18_STOCK_REMOVAL: "Glock 18: quitar culata"
@@ -512,14 +512,14 @@ es-419:
   STR_DEFAULT_BACKPACK_ADVNV_REMOVAL: "(ADVNV, BP): quitar mochila"
   STR_DEFAULT_KEVLAR_BACKPACK_REMOVAL: "(Kevlar, BP): quitar mochila"
   STR_DEFAULT_KEVLAR_NV_REMOVAL: "(Kevlar, NV): quitar visión nocturna"
-  STR_DEFAULT_KEVLAR_NV_UPG: "(Kevlar, NV): Cambiar a visión nocturna avanzada"
-  STR_DEFAULT_KEVLAR_RIOT_REMOVAL: "(Kevlar, protector facial): Quitar placas de armadura antidisturbios"
-  STR_DEFAULT_KEVLAR_RIOT_BACKPACK_REMOVAL: "(Kevlar, protector facial, BP): Quitar mochila"
-  STR_DEFAULT_KEVLAR_BACKPACK_NV_REMOVAL: "(Kevlar, NV, BP): Quitar mochila"
-  STR_DEFAULT_KEVLAR_ADVNV_REMOVAL: "(Kevlar, ADVNV): Quitar visión nocturna avanzada Visión nocturna"
-  STR_DEFAULT_KEVLAR_BACKPACK_ADVNV_REMOVAL: "(Kevlar, ADVNV, BP): Quitar mochila"
-  STR_HEAVY_NV_REMOVAL: "(Armadura pesada, NV): Quitar visión nocturna"
-  STR_HEAVY_ADVNV_REMOVAL: "(Armadura pesada, ADVNV): Quitar Adv. Visión nocturna"
+  STR_DEFAULT_KEVLAR_NV_UPG: "(Kevlar, NV): Cambiar a visión nocturna adv."
+  STR_DEFAULT_KEVLAR_RIOT_REMOVAL: "(Kevlar, protector facial): quitar placas de armadura antidisturbios"
+  STR_DEFAULT_KEVLAR_RIOT_BACKPACK_REMOVAL: "(Kevlar, protector facial, BP): quitar mochila"
+  STR_DEFAULT_KEVLAR_BACKPACK_NV_REMOVAL: "(Kevlar, NV, BP): quitar mochila"
+  STR_DEFAULT_KEVLAR_ADVNV_REMOVAL: "(Kevlar, ADVNV): quitar visión nocturna adv."
+  STR_DEFAULT_KEVLAR_BACKPACK_ADVNV_REMOVAL: "(Kevlar, ADVNV, BP): quitar mochila"
+  STR_HEAVY_NV_REMOVAL: "(Armadura pesada, NV): quitar visión nocturna"
+  STR_HEAVY_ADVNV_REMOVAL: "(Armadura pesada, ADVNV): Quitar visión nocturna adv."
 
 #rank.rul
   STR_RANK_0: "Soldado raso"
